--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.blank {
+  color: red;
+}
+p {
+  background-color: aquamarine;
+}
+
+.text {
+  font-size: 20px;
+}
+
+.btn {
+  background-color: rgb(255, 255, 255);
+  border-color: #929292;
+  font-size: larger;
+  font-weight: bold;
+  border-radius: 20px;
+}
+
+.btn1:hover {
+  background-color: rgb(234, 255, 73);
+  color: #000000;
+  border-color: #ffd91c;
+  background-image: radial-gradient();
+  /* color:#081d61; */
+}
